# isomesh-viewer

./: .gitignore  CMakeLists.txt  TODO
src/: camera.cpp  camera.h  functionbuilder.cpp  functionbuilder.h  functionselector.cpp  functionselector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meshgenerator.cpp  meshgenerator.h  primitives.cpp  primitives.h  resources.qrc  viewerwidget.cpp  viewerwidget.h
src/shaders/: grid.frag  grid.vert  main.frag  main.vert
translations/: isomeshviewer_ru_RU.ts  readme.txt  translations.qrc
